--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru"> 
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Путешествие по России</title>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="pages/index.css">
   </head>
-  <body>
-    <div>
-    </div>
+  <body class="page">
+    <div class="page__container">
+    <header class="header">
+      <img src="images/header-logo.svg" alt="Логотип" class="header__logo">
+      <ul class="header__lang-links">
+      <li><a href="#" class="header__lang-link">Ru</a></li>
+      <li><a href="#" class="header__lang-link">En</a></li>
+    </ul>
+    </header>
+    <main class="content">
+      <section class="lead">
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <img src="images/lead-polka.jpg" alt="Общее изображение к странице" class="lead__image">
+        <p class="lead__caption">ваша полка — верхняя</p>
+      </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+        <li><span class="intro__list_span">Часовых поясов</span> 11</li>
+        <li><span class="intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__list_span">Природных заповедников</span> 105</li>
+        <li><span class="intro__list_span">Аэропортов</span> 241</li>
+        </ul>
+      </section>
+      <section class="photo-grid">
+        <img src="images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
+        <img src="images/photo-grid-atharva-tulsi.jpg" alt="Талышские горы" class="photo-grid__item">
+        <img src="images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
+        <img src="images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
+        <img src="images/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__item">
+        <img src="images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
+        <img src="images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+        <img src="images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__item">
+        <img src="images/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item">
+        <img src="images/photo-grid-kamchatka-2.jpg" alt="Камчатка 2-е изображение" class="photo-grid__item">
+        <img src="images/photo-grid-baikal-2.jpg" alt="Байкал 2-е изображение" class="photo-grid__item">
+        <img src="images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
+      </section>
+      <section class="places">
+        <div class="place">
+          <h2 class="place__title">Куршская коса</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+          </div>
+          <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
+          <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.
+
+          На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Кольский</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+          </div>
+          <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+            
+          Возможно,&nbsp;вы&nbsp;смотрели&nbsp;Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас&nbsp;давно&nbsp;накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в&nbsp;Мурманск.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Алтай</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+          </div>
+          <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А&nbsp;если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+            
+          Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Зимний Байкал</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+          </div>
+          <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
+            в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+
+            Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+            к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
+        </div>
+        <div class="place">
+          <h2 class="place__title">Карелия</h2>
+          <div class="place__website">
+            <p class="place__url-heading">URL</p>
+            <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+          </div>
+          <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем&nbsp;полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </section>
+      <section class="cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до&nbsp;Байкала на электричках.</p>
+        </a>
+      </section>
+    </main>
+    <footer class="footer">
+      <ul class="footer__links">
+        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+      </ul>
+      <p class="footer__copyright">&copy; 2022. Анна Тайх</p>
+    </footer>
+  </div>
   </body>
 </html>
