--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествие по России</title>
   <link rel="stylesheet" href="pages/index.css">
 </head>
@@ -23,17 +23,16 @@
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/lead-polka.jpg" alt="Общее изображение к странице" class="lead__image">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-      </figure>
+      </figure>-->
       <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
-        <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%
-          планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
-          деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми
-          льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта
-          и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла
-          в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч
-          километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего
-          отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести
+          отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия &mdash; это целая вселенная с
+          ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
+          без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова &mdash; смелая
+          молодая мама, которая взяла в охапку троих детей, усадила их в свою &laquo;Ладу&raquo; и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li><span class="intro__list-span">Часовых поясов</span> 11</li>
           <li><span class="intro__list-span">Объектов природного наследия ЮНЕСКО</span> 12</li>
@@ -75,7 +74,7 @@
               стального, прохладного моря.</p>
           </div>
         </article>
-        <article class="place">
+         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
@@ -132,7 +131,7 @@
               197.011&nbsp;км/ч.</p>
           </div>
         </article>
-        <article class="place">
+      <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
