--- a/index.html
+++ b/index.html
@@ -17,26 +17,20 @@
         <li><a href="#" class="header__lang-link">En</a></li>
       </ul>
     </header>
-    <main class="content">
+   <main class="content">
       <figure class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/lead-polka.jpg" alt="Общее изображение к странице" class="lead__image">
         <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-      </figure>-->
-      <section class="intro">
+      </figure>
+     <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести
-          отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия &mdash; это целая вселенная с
-          ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
-          без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова &mdash; смелая
-          молодая мама, которая взяла в охапку троих детей, усадила их в свою &laquo;Ладу&raquo; и проехала 20 тысяч
-          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
           <li><span class="intro__list-span">Часовых поясов</span> 11</li>
           <li><span class="intro__list-span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-          <li><span class="intro__list-span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__list-span">Объектов&nbsp;культурного&nbsp;наследия&nbsp;ЮНЕСКО</span>&nbsp;16</li>
           <li><span class="intro__list-span">Природных заповедников</span> 105</li>
           <li><span class="intro__list-span">Аэропортов</span> 241</li>
         </ul>
@@ -66,12 +60,12 @@
           <div>
             <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
               горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
-              Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
-            <p class="place__paragraph">На&nbsp;этом Калининградская область
-              не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash;
-              самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших
-              приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах
-              стального, прохладного моря.</p>
+              Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.
+            </p>
+            <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника
+              и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
+              коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест
+              исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
           </div>
         </article>
         <article class="place">
@@ -86,12 +80,7 @@
             <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра,
               от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
               прикидывающийся Баренцевым морем.</p>
-            <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже
-              слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo;
-              не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно,
-              вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов
-              вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом
-              в&nbsp;Мурманск.</p>
+            <p class="place__paragraph">Возможно, вы&nbsp;смотрели&nbsp;Звягинцева и даже слышали историю&nbsp;арктического&nbsp;фестиваля&nbsp;в Териберке. Возможно, слово &laquo;Хибины&raquo;&nbsp;не&nbsp;осталось&nbsp;под&nbsp;снегом школьных&nbsp;воспоминаний&nbsp;об&nbsp;уроках географии.&nbsp;Возможно,&nbsp;вы&nbsp;не интересовались пронизывающей земную кору сверхглубокой скважиной,&nbsp;а&nbsp;от&nbsp;апатитов&nbsp;вас&nbsp;давно накрывает апатия. Но&nbsp;ваша мечта увидеть&nbsp;северное&nbsp;сияние&nbsp;начинает сбываться&nbsp;с&nbsp;билетом&nbsp;в&nbsp;Мурманск.</p>
           </div>
         </article>
         <article class="place">
@@ -103,10 +92,9 @@
           </div>
           <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
           <div>
-            <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
-              В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами,
-              горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться
-              с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+            <p class="place__paragraph">Алтай&nbsp;&mdash;&nbsp;одно&nbsp;из&nbsp;красивейших&nbsp;мест в&nbsp;России. В&nbsp;первую очередь из-за
+              гор:&nbsp;если&nbsp;ехать&nbsp;вдоль&nbsp;хребта,&nbsp;вы увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если
+              вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
             <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше
               всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят
               лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые
@@ -121,14 +109,12 @@
           </div>
           <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
           <div>
-            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-              в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно
-              из&nbsp;красивейших мест в&nbsp;России.</p>
-            <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место
-              для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу,
-              и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года
-              на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash;
-              197.011&nbsp;км/ч.</p>
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой
+              источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу.
+              Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую
+              скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой
+              рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
           </div>
         </article>
         <article class="place">
@@ -138,13 +124,10 @@
             <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
           </div>
           <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
-          <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
-            тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
-            на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда
-            не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу,
-            видевшему солнце раньше, чем увидал его Иван Грозный.
-            В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках
-            деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          <p class="place__paragraph">Сибирь&nbsp;заканчивается&nbsp;не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская
+            лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских
+            национальных парков&nbsp;из&#8209;за&nbsp;непроходимых&nbsp;болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем&nbsp;полтысячелетия.&nbsp;Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван&nbsp;Грозный.&nbsp;В&nbsp;девственном&nbsp;лесу на&nbsp;сотню&nbsp;километров&nbsp;не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре
+                метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </article>
       </section>
       <section class="cover">
